--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
-  "name": "minimal-blog",
-  "description": "Typography driven, feature-rich blogging theme with minimal aesthetics. Includes tags/categories support and extensive features for code blocks such as live preview, line numbers, and line highlighting.",
+  "name": "Vikyath Shirva | Software Dev",
+  "description": "Portfolio of Vikyath Shirva",
   "version": "1.3.9",
-  "author": "LekoArts <hello@lekoarts.de>",
-  "license": "0BSD",
+  "author": "Vikyath Shirva",
+  "license": "",
   "starter-name": "gatsby-starter-minimal-blog",
   "scripts": {
     "build": "gatsby build",
