--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "Vikyath Shirva | Software Dev",
-  "description": "Portfolio of Vikyath Shirva",
+  "name": "minimal-blog",
+  "description": "Portfolio of Vikyath shirva",
   "version": "1.3.9",
   "author": "Vikyath Shirva",
   "license": "",
