--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "minimal-blog",
-  "description": "Portfolio of Vikyath shirva",
+  "description": "Portfolio of Vikyath Shirva ",
   "version": "1.3.9",
   "author": "Vikyath Shirva",
   "license": "",
